Dion Whitehead, Marcelo Vanzin, Jesse Pavel, Jakub Roztočil,
Kazutoshi Satoda, Anshal Shukla, Milutin Jovanović, Vadim Voituk,
goebbe, James Nicholl, Uwe donovaly, Sergey Mezentsev, Jim Lawton,
Suraj Kurapati, Paulo Moura, curtis_call, Rowan Collins,
Stephen Blackheath, asitdepends, Michael Schlotter, Robin Neatherway,
strank, and Hisateru Tanaka for contributing to this release.

{{{ Bug fixes

- Fixed an exception when trying to add new menu items to the context menu
  if some ActionSets have been unloaded (plugin deactivation)
  (Matthieu Casanova #3071355)

- Windows installer tries to quit existing jEdit instance before trying to
  install (Björn "Vampire" Kautler)

- Closes menus when toggling dockables. (#3022084 - Anshal Shukla)

- VFSBrowser escape handling fixed when used as a dialog (#3101808 - Alan Ezust)

- Context menu sorted when adding toolbar buttons (#3074164 - Alan Ezust)

- Fixed an exception when clicking ok while adding new action to the context
  menu if no action has been selected (Matthieu Casanova #3072546)

- Fixed TextArea.selectBlock() when the block is at offset 0
  (Jesse Pavel #3062072)

- Fixed a memory leak in the beanshell snippet replacement
  (Matthieu Casanova #3043132)

- The "buffer" variable is always the current buffer and not the buffer
  where the replacement occurs when using beanshell snippet replacement
  (Matthieu Casanova #3043118)

- Removed workaround in drag & drop code of TextArea that doesn't seem
  useful anymore on Ubuntu and cause exceptions when dropping a Transferable
  that is not a String but has a java.io.InputStream as representation class
  (Matthieu Casanova)

- Fixed caret going to the wrong position when adding explicit folds
  in a buffer that uses an edit mode that has no line comment
  (Matthieu Casanova #2138160)

- Fixed caret going after the explicit folds when adding explicit folds
  to the wrong position when adding explicit folds while having no